# go-kart-esc

./: .gitignore  CMakeLists.txt  README.md
Core/Src/: stm32f0xx_hal_msp.c
EWARM/: Project.eww  go-kart-esc.ewd  go-kart-esc.ewp
pcb/go-kart-esc/: #auto_saved_files#  .mxproject  3v3_LDO.kicad_sch  DRV8701P-A.kicad_sch  ESC.kicad_sym  STM32F042.kicad_sch  can.kicad_sch  fp-lib-table  go-kart-esc-B_Cu.gbr  go-kart-esc-B_Mask.gbr  go-kart-esc-B_Paste.gbr  go-kart-esc-B_Silkscreen.gbr  go-kart-esc-Edge_Cuts.gbr  go-kart-esc-F_Cu.gbr  go-kart-esc-F_Mask.gbr  go-kart-esc-F_Paste.gbr  go-kart-esc-F_Silkscreen.gbr  go-kart-esc-In1_Cu.gbr  go-kart-esc-In2_Cu.gbr  go-kart-esc-NPTH.drl  go-kart-esc-PTH.drl  go-kart-esc-job.gbrjob  go-kart-esc.ioc  go-kart-esc.kicad_pcb  go-kart-esc.kicad_pro  go-kart-esc.kicad_sch  power-a.kicad_sch  ~go-kart-esc.kicad_sch.lck
pcb/go-kart-esc/ESC.pretty/: Motor_Solder_Pad.kicad_mod  Panasonic_Electrolytic_Class_C.kicad_mod  Shunt_2725.kicad_mod
pcb/simulation/simulation/: #auto_saved_files#  simulation.kicad_pro  simulation.kicad_sch  simulation.wbk
src/: main.c
